// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Results > renders without crashing 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 2rem;
  text-align: center;
}

@media (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 3rem;
  }
}

@media (min-width: 1024px) {
  .emotion-0 {
    margin-bottom: 5rem;
  }
}

.emotion-1 {
  font-weight: 700;
  font-size: 20vw;
  margin: 3rem 0;
  width: 100%;
}

@media (min-width: 768px) {
  .emotion-1 {
    font-size: 18vw;
    margin: 4rem 0;
  }
}

@media (min-width: 1024px) {
  .emotion-1 {
    font-size: 15vw;
    margin: 5rem 0;
  }
}

@media (min-width: 1480px) {
  .emotion-1 {
    font-size: 9vw;
  }
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-bottom: 2rem;
  width: 100%;
}

@media (min-width: 480px) {
  .emotion-2 {
    width: 50%;
  }
}

@media (min-width: 1024px) {
  .emotion-2 {
    width: 25%;
  }
}

.emotion-3 {
  font-size: 14pt;
  margin: 0;
}

.emotion-4 {
  font-weight: 700;
  font-size: 10vw;
  margin: 0;
}

@media (min-width: 768px) {
  .emotion-4 {
    font-size: 6vw;
  }
}

@media (min-width: 1024px) {
  .emotion-4 {
    font-size: 4vw;
  }
}

@media (min-width: 1480px) {
  .emotion-4 {
    font-size: 3vw;
  }
}

.emotion-9 {
  font-size: 18pt;
  margin: 0;
}

<div
    class="emotion-0"
  >
    <h1
      aria-atomic="true"
      aria-live="polite"
      class="emotion-1"
      data-testid="contrastResults-heading"
    >
      Yup
    </h1>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        Small Text
        <br />
        AA: 4.5 AAA: 7.0
      </p>
      <h2
        class="emotion-4"
        data-testid="contrastResult-rating-small"
      >
        AA
      </h2>
    </div>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        <strong>
          Bold Text 18px and over 
          <br />
          AA: 3.0 AAA: 4.5
        </strong>
      </p>
      <h2
        class="emotion-4"
        data-testid="contrastResult-rating-bold"
      >
        AAA
      </h2>
    </div>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-9"
      >
        Large Text 24px and over 
        <br />
        AA: 3.0 AAA: 4.5
      </p>
      <h2
        class="emotion-4"
        data-testid="contrastResult-rating-large"
      >
        AAA
      </h2>
    </div>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        Contrast Ratio
      </p>
      <h2
        class="emotion-4"
      >
        4.66 : 1
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Results > should set the font color of seriously? to #343334 on light backgrounds 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 2rem;
  text-align: center;
}

@media (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 3rem;
  }
}

@media (min-width: 1024px) {
  .emotion-0 {
    margin-bottom: 5rem;
  }
}

.emotion-1 {
  font-weight: 700;
  font-size: 20vw;
  margin: 3rem 0;
  width: 100%;
}

@media (min-width: 768px) {
  .emotion-1 {
    font-size: 18vw;
    margin: 4rem 0;
  }
}

@media (min-width: 1024px) {
  .emotion-1 {
    font-size: 15vw;
    margin: 5rem 0;
  }
}

@media (min-width: 1480px) {
  .emotion-1 {
    font-size: 9vw;
  }
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-bottom: 2rem;
  width: 100%;
}

@media (min-width: 480px) {
  .emotion-2 {
    width: 50%;
  }
}

@media (min-width: 1024px) {
  .emotion-2 {
    width: 25%;
  }
}

.emotion-3 {
  font-size: 14pt;
  margin: 0;
}

.emotion-4 {
  font-weight: 700;
  font-size: 10vw;
  margin: 0;
}

@media (min-width: 768px) {
  .emotion-4 {
    font-size: 6vw;
  }
}

@media (min-width: 1024px) {
  .emotion-4 {
    font-size: 4vw;
  }
}

@media (min-width: 1480px) {
  .emotion-4 {
    font-size: 3vw;
  }
}

.emotion-9 {
  font-size: 18pt;
  margin: 0;
}

<div
    class="emotion-0"
  >
    <h1
      aria-atomic="true"
      aria-live="polite"
      class="emotion-1"
      data-testid="contrastResults-heading"
    >
      Nope
    </h1>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        Small Text
        <br />
        AA: 4.5 AAA: 7.0
      </p>
      <h2
        class="emotion-4"
        data-testid="contrastResult-rating-small"
      >
        Fail
      </h2>
    </div>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        <strong>
          Bold Text 18px and over 
          <br />
          AA: 3.0 AAA: 4.5
        </strong>
      </p>
      <h2
        class="emotion-4"
        data-testid="contrastResult-rating-bold"
      >
        Fail
      </h2>
    </div>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-9"
      >
        Large Text 24px and over 
        <br />
        AA: 3.0 AAA: 4.5
      </p>
      <h2
        class="emotion-4"
        data-testid="contrastResult-rating-large"
      >
        Fail
      </h2>
    </div>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        Contrast Ratio
      </p>
      <h2
        class="emotion-4"
      >
        1.2 : 1
      </h2>
    </div>
    <div
      class="emotion-2"
      style="color: rgb(52, 51, 52);"
    >
      <h2
        class="emotion-4"
        data-testid="contrastResults-seriously"
      >
        Seriously?
      </h2>
    </div>
  </div>
</DocumentFragment>
`;
